[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gnwmanager"
dynamic = ["version"]
description = ""
license = { text = "Apache-2.0" }
authors = [{ name = "Brian Pugh" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cyclopts>=3.22.5,<4",
    "littlefs-python>=0.9.0",
    "tqdm>=4.66.6,<5",
    "pillow>=11.3.0,<12",
    "tamp>=1.7.0,<2",
    "rich>=14.1.0,<15",
    "pyelftools>=0.29",
    "autoregistry>=1.0.0,<2",
    "psutil>=7.0.0,<8",
    "httpx>=0.28.1,<0.29",
    "colorama>=0.4.6,<0.5",
    "pycryptodome>=3.23.0,<4",
]

[project.urls]
homepage = "https://github.com/BrianPugh/gnwmanager"
repository = "https://github.com/BrianPugh/gnwmanager"

[project.optional-dependencies]
pyocd = ["pyocd>=0.35.1"]

[project.scripts]
gnwmanager = "gnwmanager.cli.main:run_app"

[dependency-groups]
dev = [
    "coverage[toml]>=5.1",
    "pre-commit>=2.16.0",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.7.0",
]
docs = [
    "sphinx>=6.2.1,<7.5.0",
    "sphinx_rtd_theme>=1.2.2,<2.1.0",
    "gitpython>=3.1.50",
    "sphinx-copybutton>=0.5.2,<0.6",
]
debug = [
    "ipdb>=0.13.9",
    "line_profiler>=3.5.1",
]
# keystone-engine is only needed to *regenerate* the gnw_patch firmware patch
# binaries (it's lazily imported in gnwmanager/cli/gnw_patch/patch.py). It ships
# no macOS arm64 wheel, so on Apple Silicon it builds from sdist; install with
# `uv sync --group patch`, prefixing `_PYTHON_HOST_PLATFORM=macosx-11.0-arm64`
# if the self-built wheel's platform tag is rejected.
patch = [
    "keystone-engine>=0.9.2,<0.10",
]

# --- Build backend (hatchling + hatch-vcs) -------------------------------------
# Version is derived from git tags (replaces the previous
# poetry-dynamic-versioning setup). hatch-vcs wraps setuptools-scm; a tagged
# commit (e.g. v0.22.0) builds as 0.22.0, untagged commits as 0.22.1.devN+g<sha>.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["gnwmanager"]

# `firmware.bin`/`unlock.bin` are produced by `make` and the `*.bin` files under
# gnw_patch/binaries match the repo's global `*.bin` gitignore. Hatchling excludes
# VCS-ignored files by default, so force-include them as build artifacts (parity
# with the old [tool.poetry] include list).
[tool.hatch.build]
artifacts = [
    "gnwmanager/firmware.bin",
    "gnwmanager/unlock.bin",
    "gnwmanager/cli/gnw_patch/binaries/mario/*.bin",
    "gnwmanager/cli/gnw_patch/binaries/zelda/*.bin",
]

[tool.uv]
# Rebuild (and recompute the dynamic version) when commits or tags change.
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug:",
    "if debug:",
    "if DEBUG:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
# Allow passing bytearray/memoryview where bytes is expected (pyright >=1.1.4xx
# disables this promotion by default).
disableBytesTypePromotions = false

[tool.ruff]
target-version = 'py38'

exclude = [
    "migrations",
    "__pycache__",
    "manage.py",
    "settings.py",
    "env",
    ".env",
    "venv",
    ".venv",
]

line-length = 120  # Must agree with Black

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "ISC", # flake8-implicit-str-concat
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PTH", # flake8-use-pathlib
    "Q",  # flake8-quotes
    "SIM",  # flake8-simplify
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT", # flake8-2020
]

ignore = [
    "B905",  # zip strict=True; remove once python <3.10 support is dropped.
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D401",
    "E402",
    "E501",
    "F401",
    "SIM108",  # Use ternary operator instead of `if`-`else`-block
    "TRY003",  # Avoid specifying messages outside exception class; overly strict, especially for ValueError
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "chr",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "PGH001",  # use of "eval"
]

[tool.ruff.lint.pep8-naming]
staticmethod-decorators = [
    "pydantic.validator",
    "pydantic.root_validator",
]

[tool.codespell]
skip = 'uv.lock,'
ignore-words-list = "ptd,hsi"
